# rh-wm

./: .gitignore  README.md  dune-project  flake.nix  rh-wm-opam.template  rh-wm.opam
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: c66srya5x0jf79g11lbkw7mxa88vvawg-source  f0z9g1ygqnfawmhbn2i6ygr70iqn1fr0-source  i5zbq5by44gz4w1v0kwdcv2d8vacqhd1-source  ivnnaf4h2xdkz70b64vkpsa1a378pc8a-source  zr14bprzi6s1wfglsl92jrgpgbldscsb-source  zwpp16qwlq879xwx4f2dv0ssk4b7qq5s-source
lib/: dune
lib/keys/: dune
lib/objects/: dune
lib/protocols/: dune  update.sh
rh_wm_core/: dune
rh_wm_core/objects/: dune
rh_wm_wayland/: dune
test/: dune
wm_core/: defaults.ml  dune  env.ml  env.mli  logging.ml  path.ml  path.mli
wm_core/keys/: combination.ml  dune  key.ml  modifier.ml
wm_wayland/: connection.ml  dune
